langtools/test/tools/javac/proprietary/WarnStaticImport.out
WarnStaticImport.java:12:32: compiler.warn.sun.proprietary: sun.security.x509.OIDMap
- compiler.err.warnings.and.werror
1 error
1 warning
